--- a/templates/bootstrap/header.html
+++ b/templates/bootstrap/header.html
@@ -17,6 +17,9 @@
         <!-- page icon -->
         <link href="img/lms-net.gif" rel="shortcut icon">
 
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
